# EinkPDA

./: Eink.md  README.md  keyboard.md  unicode.md  windows_compilation_errors.md
.github/workflows/: cmake-multi-platform.yml
Code/: FILEWIZ.ino  HOME.ino  SPIFFS.ino  TXT.ino  assets.h  hybridOledEink_Device.ino
Code/PocketMage_V3/: platformio.ini
Code/PocketMage_V3/include/: PokedexUI.h  assets.h  config.h  globals.h
Code/PocketMage_V3/src/: CALENDAR.cpp  FILEWIZ.cpp  HOME.cpp  JOURNAL.cpp  LEXICON.cpp  OLEDFunc.cpp  PERIODIC.cpp  POKEDEX.cpp  PocketMageV3.cpp  PokedexUI.cpp  SETTINGS.cpp  TASKS.cpp  TXT.cpp  USB.cpp  assets.cpp  einkFunc.cpp  globals.cpp  sysFunc.cpp
Code/V1/: FILEWIZ.ino  HOME.ino  SPIFFS.ino  TXT.ino  assets.h
Code/V2/: APP_TEMPLATE.ino  FILEWIZ.ino  HOME.ino  OLEDFunc.ino  SPIFFSFunc.ino  TASKS.ino  TXT.ino  assets.h  einkFunc.ino  einkPDA_V2.ino  sysFunc.ino
Code/V3/PocketMage_V3/: platformio.ini
Code/V3/PocketMage_V3/include/: assets.h  config.h  globals.h
Code/V3/PocketMage_V3/src/: FILEWIZ.cpp  HOME.cpp  OLEDFunc.cpp  PocketMageV3.cpp  TXT.cpp  assets.cpp  einkFunc.cpp  globals.cpp  sysFunc.cpp
desktop_emulator/: .gitignore  CMake fix.sh  CMakeLists.txt  DUPLICATE_SYMBOLS.md  README.md  README_PERIODIC.md  build.bat  build.sh  discovered.md  test_sprites  test_sprites.cpp
desktop_emulator/include/: Adafruit_GFX.h  Adafruit_MPR121.h  Adafruit_TCA8418.h  Arduino.h  Buzzer.h  GxEPD2_BW.h  Preferences.h  RTClib.h  SD_MMC.h  SPI.h  U8g2lib.h  USB.h  USBMSC.h  Wire.h  desktop_display.h  desktop_display_sdl2.h  esp32_shims.h  esp_cpu.h  globals_override.h  hardware_shim.h  icons.h  oled_service.h  pocketmage_compat.h  pocketmage_shim.h  sdmmc_cmd.h
desktop_emulator/include/Fonts/: FreeMono12pt7b.h  FreeMonoBold9pt7b.h  FreeSans12pt7b.h  FreeSans9pt7b.h  FreeSerif12pt7b.h  FreeSerif9pt7b.h  FreeSerifBold9pt7b.h
desktop_emulator/include/freertos/: FreeRTOS.h  task.h
desktop_emulator/src/: desktop_display.cpp  desktop_display_sdl2.cpp  desktop_display_sdl2_linux.cpp  desktop_display_sdl2_windows.cpp  hardware_shim.cpp  main.cpp  main_new.cpp  oled_service.cpp  text_utils_desktop.cpp
desktop_emulator/utils/: README.md  hydrogen_auto_crop.h  hydrogen_inverted.h  pokeball_auto_crop.h
desktop_emulator/utils/Executables/Mac - Aarch64/: image_to_bitmap
desktop_emulator/utils/Image/: Makefile  README.md  image_to_icon.cpp
